--- a/蓝牙指纹控制开关锁/1.项目代码/BH-F103/Project/RVMDK（uv5）/.vscode/settings.json
+++ b/蓝牙指纹控制开关锁/1.项目代码/BH-F103/Project/RVMDK（uv5）/.vscode/settings.json
@@ -12,6 +12,9 @@
         "bsp_led.h": "c",
         "bsp_ili9341_lcd.h": "c",
         "bsp_task.h": "c",
-        "bsp_systick.h": "c"
+        "bsp_systick.h": "c",
+        "bsp_as608.h": "c",
+        "bsp_usart.h": "c",
+        "semphr.h": "c"
     }
 }
