--- a/蓝牙指纹控制开关锁/1.项目代码/BH-F103/Project/RVMDK（uv5）/Fire_FreeRTOS.uvprojx
+++ b/蓝牙指纹控制开关锁/1.项目代码/BH-F103/Project/RVMDK（uv5）/Fire_FreeRTOS.uvprojx
@@ -613,6 +613,16 @@
               <FileType>1</FileType>
               <FilePath>..\..\User\src\bsp_hc05.c</FilePath>
             </File>
+            <File>
+              <FileName>bsp_as608.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\User\src\bsp_as608.c</FilePath>
+            </File>
+            <File>
+              <FileName>rx_data_queue.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\User\src\rx_data_queue.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
